--- a/style.css
+++ b/style.css
@@ -9,4 +9,9 @@ body {
   flex-direction: column;
   align-items: center;
   background: linear-gradient(to top left, #28b487, #7dd56f) ;
+
+}
+
+button {
+  margin-bottom: 20px;
 }
