--- a/maze_generator/style.css
+++ b/maze_generator/style.css
@@ -1,4 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+* {
+  font-family: 'Press Start 2P';
+}
+
 h1 {
+  margin-top: 5rem;
   text-align: center;
 
 }
@@ -8,10 +15,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: linear-gradient(to top left, #28b487, #7dd56f) ;
+  margin-top: 20px;
+  background: rgb(0) ;
 
 }
 
 button {
-  margin-bottom: 20px;
+  border: none;
+  margin: 5rem 0;
+  padding: 2rem;
 }
