--- a/maze_generator/style.css
+++ b/maze_generator/style.css
@@ -16,7 +16,7 @@ body {
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
-  background: rgb(0) ;
+  background: rgb(255, 255, 255) ;
 
 }
 
