--- a/maze_generator/style.css
+++ b/maze_generator/style.css
@@ -5,7 +5,7 @@
 }
 
 h1 {
-  margin-top: 5rem;
+  margin-top: 2rem;
   text-align: center;
 
 }
@@ -22,6 +22,10 @@ body {
 
 button {
   border: none;
-  margin: 5rem 0;
+  margin: 2rem 0;
   padding: 2rem;
+}
+
+.p5Canvas {
+  margin: 2rem 0;
 }
