--- a/maze_generator/style.css
+++ b/maze_generator/style.css
@@ -6,18 +6,29 @@
 
 h1 {
   margin-top: 2rem;
-  text-align: center;
 
 }
 
 body {
-  height: 100vh;
+  background: rgb(255, 255, 255) ;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 20px;
-  background: rgb(255, 255, 255) ;
+}
 
+ul, li, a {
+  text-decoration: none;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.nav-link li {
+  display: inline-block;
 }
 
 button {
@@ -28,4 +39,5 @@ button {
 
 .p5Canvas {
   margin: 2rem 0;
+  
 }
